Fix header nav alignment, fix products alignment

--- a/src/sass/components/_header.scss
+++ b/src/sass/components/_header.scss
@@ -25,7 +25,6 @@ header{
         height: 57px;
         width: 100%;
         a{
-            cursor: pointer;
             text-decoration: none;
             color: $color-text;
             font-family: "SpaceMono";
@@ -67,9 +66,9 @@ header{
             }
         }
         .header_2{
-            margin: 35px 50px 20px 50px;
+            margin: 20px 10px 0px 0px;
             height: 57px;
-            width: 40%;
+            width: 470px;
             a{
                 display: flex;
                 align-items: center;
